# ptera

./: .flake8  .gitignore  .isort.cfg  .travis.yml  LICENSE  ML-README.md  OLD-README.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: conf.py  guide.rst  index.rst  intro.rst  ref-api.rst  ref-interpret.rst  ref-operators.rst  ref-opparse.rst  ref-overlay.rst  ref-probe.rst  ref-selector.rst  ref-tags.rst  ref-transform.rst  ref-utils.rst  reference.rst  requirements.txt  testing.rst  uses.rst
examples/: guess.py  mlp.py
ptera/: __init__.py  categories.py  cli.py  core.py  deco.py  interpret.py  operators.py  opparse.py  overlay.py  probe.py  recur.py  rewrite.py  selector.py  selfless.py  storage.py  tags.py  tools.py  torch.py  transform.py  utils.py
scripts/: fix.sh
tests/: common.py  feat38.py  milk.py  test_categories.py  test_cli.py  test_core.py  test_custom_resolver.py  test_interpret.py  test_operators.py  test_probe.py  test_recur.py  test_rewrite.py  test_selector.py  test_selfless.py  test_storage.py  test_tags.py  test_tools.py  test_transform.py  test_utils.py  walrus.py
