[tool.poetry]
name = "ptera"
version = "0.5.1"
description = "Call graph addressing library."
authors = ["Olivier Breuleux <breuleux@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/breuleux/ptera"

[tool.poetry.dependencies]
python = "^3.6"
codefind = {version = "^0.1.2", python = "^3.8"}
contextvars = {version = "^2.4", python = "~3.6"}
giving = "^0.3.6"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b1", python = "^3.7"}
pytest = "^6.2.5"
pytest-cov = "^2.8.1"
isort = {extras = ["pyproject"], version = "^5.6.4"}
flake8 = "^3.7.9"
coverage = {extras = ["toml"], version = "^5.0.3"}
toml = "^0.10.0"
pyyaml = "^5.3"

[tool.black]
line-length = 80

[tool.isort]
known_first_party = "ptera"
known_third_party = "numpy,torch,torchvision"
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.unimport]
exclude = ["__init__.py", "test_tools.py"]

[tool.coverage.run]
omit = []

[build-system]
requires = ["poetry-core@https://github.com/python-poetry/poetry-core/archive/325312c016d69189ac93c945ba0c1b69296c5e54.zip"]
build-backend = "poetry.core.masonry.api"
