[tool.poetry]
name = "ptera"
version = "1.3.0"
description = "Call graph addressing library."
authors = ["Olivier Breuleux <breuleux@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mila-iqia/ptera"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.11"
codefind = {version = "^0.1.2", python = "^3.8"}
giving = "^0.4.0"

[tool.poetry.dev-dependencies]
black = ">=21.5b1"
pytest = ">=6.2.5"
pytest-cov = ">=2.8.1"
isort = {extras = ["pyproject"], version = "^5.6.4"}
flake8 = "^3.7.9"
coverage = {extras = ["toml"], version = "^5.0.3"}
toml = "^0.10.0"
pyyaml = "^5.3"

[tool.black]
line-length = 80

[tool.isort]
known_first_party = "ptera"
known_third_party = ""
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.coverage.run]
omit = []

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
